fix: dark mode tweaks and test fixes (requests in context) (#7338)
* Fix:		toolbar bug 3.10.rc1

* Feat:	Dark mode support, including input from @marksweb, bugfix for tooltips

* Upstream change to be able to merge

* Feat: Dark mode support, including input from @marksweb, bugfix for tooltips

* Revert "Fix:		toolbar bug 3.10.rc1"

This reverts commit 592a2b604e8f72b8e9c948e83163394cc6e8fe3d.

* Fix:		Recommit toolbar fix (??)

* Fix:		After lint failure: Remove spaces added by PyCharm

* Fix:		Wizzard button color

* Fix:		Correct toolbar according to cms_path
Fix:		Avoid unnecessary toolbar loading

* TASK: use isort to sort imports

* Fix:		Remove unused css rule
Fix:		Add plugin search bar text did not reflect dark mode

* Fix:		Toolbar tests to include request object for TextPlugin

* Fix:		Pass a request (None) for the processors test

--- a/cms/static/cms/sass/settings/_cms.scss
+++ b/cms/static/cms/sass/settings/_cms.scss
@@ -7,7 +7,7 @@ $speed-base: 200ms;
 // COLORS
 $white: var(--dca-white);
 $black: var(--dca-black);
-:root, :root.cms-light-mode {
+:root, :root[data-color-scheme="light"] {
     --dca-light-mode: 1;
     --dca-dark-mode: 0;
     --dca-white: #FFFFFF;
@@ -30,10 +30,8 @@ $black: var(--dca-black);
     color-scheme: dark light;
 }
 
-:root[data-color-scheme="light"] {
+root[data-color-scheme="light"] {
     color-scheme: light;
-    --dca-light-mode: 1;
-    --dca-dark-mode: 0;
 }
 
 :root[data-color-scheme="dark"] {
@@ -54,6 +52,7 @@ $black: var(--dca-black);
     --active-brightness: 2;
     --focus-brightness: 1.5;
 }
+
 @media (prefers-color-scheme: dark) {
     :root:not([data-color-scheme]) {
         --dca-light-mode: 0;
